Fix displaying on mobile devices

--- a/wwwroot/css/chota.css
+++ b/wwwroot/css/chota.css
@@ -44,6 +44,19 @@ html {
     }
 }
 
+@media(max-width: 376px) {
+    html {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+    .nav-left {
+        margin-left: 0;
+    }
+    .tabs {
+        flex-direction: column;
+    }
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
